<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="pair_with_bankdroid">Pair with Bankdroid</string>
    <string name="app_name">Payday</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_budget">Payday</string>
    <string name="days_until_payday_title">days until payday</string>
    <string name="daily_budget_title">Today\'s Budget</string>
    <string name="balance_title">Balance</string>
    <string name="goal_label">Savings goal</string>
    <string name="spentToday_title">Spent today</string>
    <string name="bankdroid_is_not_installed">Bankdroid connects to your internet bank, allowing payday to check your account balance. </string>
    <string name="install_bankdroid">Install Bankdroid</string>
    <string name="bankdroid_not_installed_title">Bankdroid is not installed</string>
    <string name="pick_account">Pick account</string>
    <string name="savings_goal_description">Reserve this amount from the balance when calculating the daily budget</string>
    <string name="savings_goal_title">Savings goal</string>
    <string name="your_budget_section">Your budget</string>
    <string name="bankdroid_integration_section_title">Bankdroid integration</string>
    <string name="payday_title">Payday</string>
    <string name="payday_description">What day of the month do you get paid?</string>
    <string name="bankdroid_permission_provider_label">Basic account information and the transaction history</string>
    <string name="bankdroid_permission_provider_desc">Allows the application to access what banks and accounts are configured in BankDroids. Your Bank credentials are not exposed. Transaction history can also be accessed.</string>
    <string name="connect_to_bankdroid">Connect to Bankdroid</string>
    <string name="connect_to_bankdroid_dialog_body">You need to connect to Bankdroid to access your account balance</string>
    <string name="connect_to_bankdroid_settings">Go to settings</string>
    <string name="details">Details</string>
    <string name="use_spent_today">Activate spent today</string>
    <string name="use_spent_today_summary">For some banks, this calculation is unreliable. </string>

    <string name="add_budget_item">Add budget item </string>

    <!-- About screen -->
            <string name="about_title">Information</string>§§§
    <string name="about_button">About Payday</string>
    <string name="about_text">Bankdroid and Payday are handling your bank account information.\n\n
	     
	    All source code is available so you can verify that it is being handled safely.\n\n
	    
	    Source code for Payday is available at \n
        <b>http://github.com/cortex/payday</b>\n
        \n
	    Patches and bug reports are welcome! \n
	    \n
	    Send feedback and improvement suggestions to\n
        <b>joakim.lundborg\@gmail.com</b>\n
	    \n	    
	    Payday uses Bankdroid to connect to your internet bank.\n
        \n
	    Source code for Bankdroid is available at:\n
        <b>https://github.com/liato/android-bankdroid</b>\n
        \n
        If you like Bankdroid, support development with donations or code!\n
    </string>

    <!-- Setup screen -->
    <string name="setup_activity_title">Welcome to Payday</string>
    <string name="setup_intro">We need to set up a few things before you can start</string>
    <string name="setup_title">Welcome!</string>
    <string name="setup_install_bankdroid">Install Bankdroid</string>
    <string name="setup_install_bankdroid_button">Install Bankdroid</string>
    <string name="setup_bankdroid_account">Set up the account you want to use in Bankdroid</string>
    <string name="setup_pair_with_bankdroid">Connect to Bankdroid</string>
    <string name="setup_pair_with_bankdroid_button">Connect to Bankdroid</string>
    <string name="setup_pick_account">Pick account</string>
    <string name="setup_done">Done</string>
    <string name="setup_nomarket_title">Play store not found</string>
    <string name="setup_nomarket_description">
        Payday cannot work without Bankdroid installed. Please install Bankdroid using some other method.
    </string>

    <!-- Budget entry dialog-->
    <string name="new_budget_entry_hint">Title</string>
    <string name="new_budget_entry_amount">500</string>
    <string name="cancel_add_budget_item">Cancel</string>
    <string name="add_budget_item_dialog_title">Add new budget item</string>
    <string name="no_accounts_selected_warning">You need to pick at least one account. Your previous settings will be
        kept.
    </string>
    <string name="pick_account_description">The balance of this account will be used for calculating your daily budget.</string>
    <string name="pick_accounts_description">If you choose multiple accounts, the balance will be summed.</string>
    <string name="new_budget_item_no_amount_specified">You have to specify an amount</string>
    <string name="delete_budget_item_title">Confirm deletion</string>
    <string name="delete_budget_item_message">Are you sure you want to delete this budget item?</string>
    <string name="delete_budget_item_yes">Delete</string>
    <string name="delete_budget_item_no">Cancel</string>
    <string name="emptyAmount">--</string>
    <string name="preference_section_advanced">Advanced</string>
    <string name="use_hw_accel_title" >Use hardware acceleration</string>
    <string name="use_hw_accel_summary" >This is slow on some devices</string>
    <string name="transaction_history_title">Transaction History</string>


    <string-array name="budget_item_type">
        <item>Expense</item>
        <item>Income</item>
    </string-array>

</resources>
