<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/balanceTitleTextView"
            style="@style/paydayLabel"
            android:text="@string/balance_title" />

        <TextView
            android:id="@+id/balanceView"
            style="@style/paydayNumber"
            android:text="--" />

        <TextView
            android:id="@+id/spentTodayTitleTextView"
            style="@style/paydayLabel"
            android:text="@string/spentToday_title" />

        <TextView
            android:id="@+id/spentTodayView"
            style="@style/paydayNumber"
            android:text="--" />
        
        
        <TextView
            android:id="@+id/goalLabel"
            style="@style/paydayLabel"
            android:text="@string/goal_label" />

        <TextView
            android:id="@+id/goalView"
            style="@style/paydayNumber"
            android:text="--" />

        <TextView
            android:id="@+id/daysToPaydayTitleTextView"
            style="@style/paydayLabel"
            android:text="@string/days_until_payday_title" />

        <TextView
            android:id="@+id/daysToPaydayView"
            style="@style/paydayNumber"
            android:text="--" />

        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/line_separator" />

        <TextView
            android:id="@+id/budgetTitleTextView"
            style="@style/paydayLabel"
            android:text="@string/daily_budget_title" />

        <TextView
            android:id="@+id/budgetTextView"
            style="@style/budgetNumber"
            android:text="--"/>
    </LinearLayout>

</ScrollView>