<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setupView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/bg"
    android:fillViewport="true" >

    <LinearLayout
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            style="@style/card"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setupTitle"
                style="@style/setupLabel"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/setup_title"
                android:textSize="36sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/setupDescription"
                style="@style/setupLabel"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/setup_intro"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/bankdroidInstalledStatusIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_notok" />

                <TextView
                    android:id="@+id/setupStep1"
                    style="@style/setupLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="1. "
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView1"
                    style="@style/setupLabel"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/setupStep1"
                    android:text="@string/setup_install_bankdroid" />

                <Button
                    android:id="@+id/installBankdroidButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="false"
                    android:layout_below="@id/textView1"
                    android:minHeight="24dip"
                    android:onClick="installBankdroidClicked"
                    android:text="@string/setup_install_bankdroid_button" />

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" >

                <TextView
                        android:id="@+id/setupStep2"
                        style="@style/setupLabel"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="2. "
                        android:textStyle="bold" />


                <TextView
                        android:id="@+id/textView"
                        style="@style/setupLabel"
                        android:text="@string/setup_bankdroid_account"
                        android:layout_toRightOf="@+id/setupStep2" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="right|left">

                <TextView
                    android:id="@+id/setup_3"
                    style="@style/setupLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="3. "
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/connectToBankdroidLabel"
                    style="@style/setupLabel"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/setup_3"
                    android:layout_marginRight="40dp"
                    android:text="@string/setup_pair_with_bankdroid" />

                <ImageView
                    android:id="@+id/bankdroidConnectedStatusIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_notok" />

                <Button
                        android:id="@+id/connectBankdroidButton"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="false"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentTop="false"
                        android:layout_below="@id/connectToBankdroidLabel"
                        android:minHeight="24dip"
                        android:onClick="connectToBankdroidClicked"
                        android:text="@string/setup_pair_with_bankdroid_button" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp" >

                <TextView
                    style="@style/setupLabel"
                    android:text="4. "
                    android:textStyle="bold"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/textView3"/>

                <TextView
                    style="@style/setupLabel"
                    android:text="@string/setup_pick_account"
                    android:id="@+id/setupAccountLabel"
                    android:layout_toRightOf="@+id/textView3"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_alignParentTop="true"/>

                <ImageView
                    android:id="@+id/accountPickedStatusIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notok"
                    android:layout_gravity="center"
                    android:layout_alignParentLeft="false"
                    android:layout_marginLeft="189dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentRight="true"/>

                <Spinner
                    android:id="@+id/setupAccountSpinner"
                    android:layout_below="@id/setupAccountLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                        />

            </RelativeLayout>


            <Button
                android:id="@+id/setupDoneButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="doneClicked"
                android:text="@string/setup_done" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>